--- a/css/main-style.css
+++ b/css/main-style.css
@@ -6,11 +6,11 @@ body {
 
 
 header {
-    background-color: lightblue;
+    background-color: #ADD8E6FF;
 }
 
 nav {
-    background-color: lightgreen;
+    background-color: #90EE90FF;
     padding: 10px;
 }
 
@@ -44,4 +44,48 @@ p {
 
 #hobby img {
     width: 25%;
+}
+
+
+.container {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    color: white;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
+.btn-submit {
+    background-color: #4CAF50;
+}
+
+.btn-reset {
+    background-color: #fff;
+    color: #000;
 }
